--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -204,161 +204,226 @@ export async function updateJson<T extends object>(
 }
 ```
 
-## Example Uses
+## Example Uses (Scrap all links by pagination)
+```ts
+
+```
+## Example Uses (Scrap Details Page data)
 ```ts
 // scraper.ts
-// scraper.ts – 100% WORKING VERSION
-import { appendTextFile } from './utils/text';
-import {
-  appendToCsvFile,
-  writeCsvFile,
-  readCsvFile,
-  loadProgress as loadCsvProgress,
-  saveProgress as saveCsvProgress,
-} from './utils/csv';
-import {
-  appendJsonArray,
-  readJson,
-  writeJson,
-  loadProgress as loadJsonProgress,
-  saveProgress as saveJsonProgress,
-} from './utils/json';
+import got from 'got';
+import * as cheerio from 'cheerio';
+import fs from 'fs/promises';
+import { appendToCsvFile } from './utils/csv.js';
+import { loadProgress, saveProgress } from './utils/progress.js';
 
-// ─────────────────────────────────────
-// 1. TEXT FILE: Save raw links
-async function exampleTextFile() {
-  const file = 'data/links.txt';
-  const fakeLinks = [
-    'https://notaires.fr/notaire/12345',
-    'https://notaires.fr/notaire/67890',
-    'https://notaires.fr/notaire/abcde',
-  ];
-  for (const link of fakeLinks) {
-    await appendTextFile(file, link);
-    console.log('Saved link:', link);
-  }
-  console.log('All links saved to data/links.txt\n');
-}
+const LINKS_FILE = 'data/notaires_all_links.txt';
+const PROGRESS_FILE = 'data/notaires_progress.json';
+const OUTPUT_FILE = 'data/notaires_data.csv';
+const CONCURRENCY = 3; // Number of URLs to process simultaneously
 
-// ─────────────────────────────────────
-// 2. CSV: Append + Resume
-interface Notaire {
-  name: string;
-  city: string;
-  phone: string;
-  email: string;
-  url: string;
-}
+// Define the type
+type NotaryField = 'name' | 'phone' | 'languages' | 'website' | 'status' | 'profileUrl';
 
-const CSV_FILE = 'data/notaires.csv';
-const CSV_PROGRESS_FILE = 'data/progress-csv.json';
-
-const header = [
+// CSV Header (only written on first run)
+const HEADER: Array<{ id: NotaryField; title: string }> = [
   { id: 'name', title: 'Full Name' },
-  { id: 'city', title: 'City' },
   { id: 'phone', title: 'Phone' },
-  { id: 'email', title: 'Email' },
-  { id: 'url', title: 'Profile URL' },
-] as const;
+  { id: 'languages', title: 'Languages' },
+  { id: 'website', title: 'Website' },
+  { id: 'status', title: 'Status' },
+  { id: 'profileUrl', title: 'Profile URL' },
+];
 
-async function exampleCsvWithResume() {
-  const totalPages = 1932;
-  let currentPage = await loadCsvProgress(totalPages, CSV_PROGRESS_FILE);
-
-  console.log(`Starting CSV scraping from page ${currentPage}...`);
-
-  for (; currentPage <= currentPage + 9 && currentPage <= totalPages; currentPage++) {
-    const fakeData: Notaire[] = [
-      {
-        name: `Notaire ${currentPage}A`,
-        city: 'Paris',
-        phone: '+33123456789',
-        email: `contact${currentPage}a@notaire.fr`,
-        url: `https://notaires.fr/notaire/${currentPage}a`,
+// Single notary scraper
+async function scrapeNotary(url: string): Promise<void> {
+  try {
+    const response = await got(url, {
+      headers: {
+        'User-Agent':
+          'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/129.0.0.0 Safari/537.36',
       },
-      {
-        name: `Notaire ${currentPage}B`,
-        city: 'Lyon',
-        phone: '+33456789012',
-        email: `contact${currentPage}b@notaire.fr`,
-        url: `https://notaires.fr/notaire/${currentPage}b`,
-      },
-    ];
+      timeout: { request: 15000 },
+      retry: { limit: 3 },
+    });
 
-    await appendToCsvFile(CSV_FILE, fakeData, header);
-    await saveCsvProgress(CSV_PROGRESS_FILE, currentPage);
+    const $ = cheerio.load(response.body);
 
-    console.log(`Page ${currentPage} saved → 2 notaires`);
-  }
-  console.log('CSV example done!\n');
-}
+    const name = $('div.notary-card__line').first().text().trim() || 'N/A';
+    const phone = $('div.office-sheet__phone.field--telephone').first().text().trim() || 'N/A';
+    const languages = $('div.field__items.field-spoken-languages').first().text().trim() || 'N/A';
+    const website = $('div.office-sheet__url.field--link a').first().attr('href')?.trim() || '';
+    const status = $('p.notary-card__status').first().text().trim() || 'N/A';
 
-// ─────────────────────────────────────
-// 3. JSON: Append + Resume
-interface Product {
-  title: string;
-  price: string;
-  url: string;
-  scrapedAt: string;
-}
-
-const JSON_FILE = 'data/products.json';
-const JSON_PROGRESS_FILE = 'data/progress-json.json';
-
-async function exampleJsonAppend() {
-  let page = await loadJsonProgress(100, JSON_PROGRESS_FILE);
-
-  console.log(`Starting JSON append from page ${page}...`);
-
-  for (let i = 0; i < 5; i++, page++) {
-    const product: Product = {
-      title: `MacBook Pro ${page}`,
-      price: `$${(2000 + page * 10)}`,
-      url: `https://apple.com/macbook-${page}`,
-      scrapedAt: new Date().toISOString(),
+    const row = {
+      name,
+      phone,
+      languages,
+      website,
+      status,
+      profileUrl: url,
     };
 
-    await appendJsonArray(JSON_FILE, product);
-    await saveJsonProgress(JSON_PROGRESS_FILE, page);
-
-    console.log(`Appended: ${product.title}`);
+    await appendToCsvFile(OUTPUT_FILE, [row], HEADER);
+    console.log(`Saved: ${name}`);
+  } catch (err: any) {
+    console.error(`Failed: ${url} → ${err.message}`);
+    // Still count as processed so we don't retry forever
   }
-  console.log('JSON example done!\n');
 }
 
-// ─────────────────────────────────────
-// 4. Read everything back
-async function exampleReadAll() {
-  console.log('=== READING ALL DATA BACK ===\n');
-
-  // Read text file
-  try {
-    const content = await import('fs/promises').then(m => m.readFile('data/links.txt', 'utf-8'));
-    console.log('Links from TXT:');
-    console.log(content.trimEnd());
-  } catch {}
-
-  // Read CSV
-  const notaires = await readCsvFile<Notaire>(CSV_FILE);
-  console.log(`\nLoaded ${notaires.length} notaires from CSV:`);
-  console.table(notaires.slice(0, 3).map(n => ({ name: n.name, city: n.city })));
-
-  // Read JSON
-  const products = await readJson<Product[]>(JSON_FILE, []);
-  console.log(`\nLoaded ${products.length} products from JSON:`);
-  console.table(products.map(p => ({ title: p.title, price: p.price })));
-}
-
-// ─────────────────────────────────────
-// Run everything
+// MAIN SCRAPER — RESUMABLE & SAFE
 async function main() {
-  await exampleTextFile();
-  await exampleCsvWithResume();
-  await exampleJsonAppend();
-  await exampleReadAll();
-  console.log('All examples completed! Check the data/ folder');
+  console.log('Loading links from:', LINKS_FILE);
+  const content = await fs.readFile(LINKS_FILE, 'utf-8');
+  const allLinks = content
+    .split('\n')
+    .map(l => l.trim())
+    .filter(l => l.startsWith('http'));
+
+  const total = allLinks.length;
+  if (total === 0) {
+    console.log('No links found!');
+    return;
+  }
+
+  let startIndex = await loadProgress(total, PROGRESS_FILE);
+  console.log(`Starting from link ${startIndex} of ${total}`);
+
+  for (let i = startIndex - 1; i < allLinks.length; i += CONCURRENCY) {
+    // Process URLs concurrently based on CONCURRENCY setting
+    const batch = allLinks
+      .slice(i, i + CONCURRENCY)
+      .filter((url): url is string => Boolean(url)); // Type guard to remove undefined
+
+    if (batch.length === 0) continue;
+
+    console.log(`\n[${i + 1}-${i + batch.length}/${total}] Processing batch of ${batch.length} URLs`);
+
+    // Scrape all URLs in batch concurrently
+    await Promise.all(batch.map(url => scrapeNotary(url)));
+
+    // Save progress after batch completes
+    const currentIndex = i + batch.length;
+    await saveProgress(PROGRESS_FILE, currentIndex);
+  }
+
+  console.log('\nAll done! Scraping completed successfully!');
+  console.log(`Data saved to: ${OUTPUT_FILE}`);
+
+  // Optional: remove progress file when fully done
+  await fs.unlink(PROGRESS_FILE).catch(() => {});
 }
 
-main().catch(console.error);
+main().catch(err => {
+  console.error('Scraper crashed:', err);
+  process.exit(1);
+});
+```
+## Example Uses (Details page data scrap - one by one)
+```ts
+// scraper.ts
+import got from 'got';
+import * as cheerio from 'cheerio';
+import fs from 'fs/promises';
+import { appendToCsvFile } from './utils/csv.js';
+import { loadProgress, saveProgress } from './utils/progress.js';
+
+const LINKS_FILE = 'data/notaires_all_links.txt';
+const PROGRESS_FILE = 'data/notaires_progress.json';
+const OUTPUT_FILE = 'data/notaires_data.csv';
+
+// Define the type
+type NotaryField = 'name' | 'phone' | 'languages' | 'website' | 'status' | 'profileUrl';
+
+// CSV Header (only written on first run)
+const HEADER: Array<{ id: NotaryField; title: string }> = [
+  { id: 'name', title: 'Full Name' },
+  { id: 'phone', title: 'Phone' },
+  { id: 'languages', title: 'Languages' },
+  { id: 'website', title: 'Website' },
+  { id: 'status', title: 'Status' },
+  { id: 'profileUrl', title: 'Profile URL' },
+];
+
+// Single notary scraper
+async function scrapeNotary(url: string): Promise<void> {
+  try {
+    const response = await got(url, {
+      headers: {
+        'User-Agent':
+          'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/129.0.0.0 Safari/537.36',
+      },
+      timeout: { request: 15000 },
+      retry: { limit: 3 },
+    });
+
+    const $ = cheerio.load(response.body);
+
+    const name = $('div.notary-card__line').first().text().trim() || 'N/A';
+    const phone = $('div.office-sheet__phone.field--telephone').first().text().trim() || 'N/A';
+    const languages = $('div.field__items.field-spoken-languages').first().text().trim() || 'N/A';
+    const website = $('div.office-sheet__url.field--link a').first().attr('href')?.trim() || '';
+    const status = $('p.notary-card__status').first().text().trim() || 'N/A';
+
+    const row = {
+      name,
+      phone,
+      languages,
+      website,
+      status,
+      profileUrl: url,
+    };
+
+    await appendToCsvFile(OUTPUT_FILE, [row], HEADER);
+    console.log(`Saved: ${name}`);
+  } catch (err: any) {
+    console.error(`Failed: ${url} → ${err.message}`);
+    // Still count as processed so we don't retry forever
+  }
+}
+
+// MAIN SCRAPER — RESUMABLE & SAFE
+async function main() {
+  console.log('Loading links from:', LINKS_FILE);
+  const content = await fs.readFile(LINKS_FILE, 'utf-8');
+  const allLinks = content
+    .split('\n')
+    .map(l => l.trim())
+    .filter(l => l.startsWith('http'));
+
+  const total = allLinks.length;
+  if (total === 0) {
+    console.log('No links found!');
+    return;
+  }
+
+  let startIndex = await loadProgress(total, PROGRESS_FILE);
+  console.log(`Starting from link ${startIndex} of ${total}`);
+
+  for (let i = startIndex - 1; i < allLinks.length; i++) {
+    const url = allLinks[i];
+    if (!url) continue; // Skip if undefined
+    
+    const currentIndex = i + 1;
+
+    console.log(`\n[${currentIndex}/${total}] Scraping: ${url}`);
+    await scrapeNotary(url);
+
+    // Save progress after every successful or failed link
+    await saveProgress(PROGRESS_FILE, currentIndex);
+  }
+
+  console.log('\nAll done! Scraping completed successfully!');
+  console.log(`Data saved to: ${OUTPUT_FILE}`);
+
+  // Optional: remove progress file when fully done
+  await fs.unlink(PROGRESS_FILE).catch(() => {});
+}
+
+main().catch(err => {
+  console.error('Scraper crashed:', err);
+  process.exit(1);
+});
 ```
 
