--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -206,7 +206,136 @@ export async function updateJson<T extends object>(
 
 ## Example Uses (Scrap all links by pagination)
 ```ts
+import got from 'got';
+import * as cheerio from 'cheerio';
+import fs from 'fs/promises';
+import path from 'path';
 
+const OUTPUT_FILE = 'data/notaires_all_links.txt';
+const PROGRESS_FILE = 'data/scrape_progress.json';  // ← NEW: tracks progress
+
+async function ensureDir(filePath: string): Promise<void> {
+  await fs.mkdir(path.dirname(filePath), { recursive: true });
+}
+
+async function appendTextFile(filePath: string, content: string): Promise<void> {
+  await ensureDir(filePath);
+  await fs.appendFile(filePath, content + '\n', 'utf-8');
+}
+
+// Save progress to disk
+async function saveProgress(currentPage: number, totalPages: number) {
+  await ensureDir(PROGRESS_FILE);
+  await fs.writeFile(PROGRESS_FILE, JSON.stringify({ currentPage, totalPages }, null, 2));
+}
+
+// Load progress (returns start page)
+async function loadProgress(totalPages: number): Promise<number> {
+  try {
+    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
+    const json = JSON.parse(data);
+    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
+      console.log(`Resuming from page ${json.currentPage + 1}`);
+      return json.currentPage + 1;
+    }
+  } catch (err) {
+    // No progress file → start from beginning
+  }
+  return 1;
+}
+
+// Your existing getLinks function (unchanged)
+const getLinks = async (url: string): Promise<string[]> => {
+  const response = await got(url, {
+    headers: {
+      'User-Agent': 'Mozilla/5.0 (compatible; NotaryDirectoryScraper/1.0)',
+    },
+    timeout: { request: 15000 },
+    retry: { limit: 3 },
+  });
+
+  if (response.statusCode !== 200) {
+    throw new Error(`Status ${response.statusCode}`);
+  }
+
+  const $ = cheerio.load(response.body);
+  const links: string[] = [];
+
+  $('h2.notary-card__title a').each((_, el) => {
+    const href = $(el).attr('href');
+    if (href) links.push(`https://www.notaires.fr${href}`);
+  });
+
+  return links;
+};
+
+// MAIN SCRAPER — NOW RESUMABLE
+async function scrapeAllPages() {
+  const totalPages = 1932;
+  const concurrency = 3;
+
+  // ←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←
+  // JUST CHANGE THIS NUMBER TO RESUME FROM ANYWHERE
+  let startPage = await loadProgress(totalPages);
+  // Example: force start from page 201
+  // startPage = 201;
+  // ←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←
+
+  const endPage = totalPages;
+  const pagesToScrape = Array.from({ length: endPage - startPage + 1 }, (_, i) => i + startPage);
+
+  console.log(`Starting from page ${startPage} → ${endPage} (${pagesToScrape.length} pages)`);
+
+  let processed = 0;
+
+  const worker = async (page: number) => {
+    const url = page === 1
+      ? 'https://www.notaires.fr/fr/directory/notaries'
+      : `https://www.notaires.fr/fr/directory/notaries?page=${page}`;
+
+    console.log(`Fetching page ${page}...`);
+
+    try {
+      const links = await getLinks(url);
+      for (const link of links) {
+        await appendTextFile(OUTPUT_FILE, link);
+      }
+      console.log(`Page ${page} success (${links.length} links)`);
+
+      // ←←← UPDATE PROGRESS ON SUCCESS
+      await saveProgress(page, totalPages);
+      // ←←←←←←←←←←←←←←←←←←←←←←←←←←←←←←
+
+    } catch (err: any) {
+      console.error(`Page ${page} failed:`, err.message);
+      // Optional: save failed pages
+      await appendTextFile('data/failed_pages.txt', `Page ${page}: ${err.message}`);
+      // Do NOT update progress on failure → next run retries this page
+    } finally {
+      processed++;
+      console.log(`Progress: ${processed}/${pagesToScrape.length} | Overall: ${page}/${totalPages}`);
+    }
+
+    // Be nice to the server
+    await new Promise(r => setTimeout(r, 800 + Math.random() * 700));
+  };
+
+  // Concurrency control
+  const batch: Promise<void>[] = [];
+  for (const page of pagesToScrape) {
+    batch.push(worker(page));
+    if (batch.length >= concurrency) {
+      await Promise.all(batch.splice(0));
+    }
+  }
+  await Promise.all(batch);
+
+  console.log('Scraping completed!');
+  // Optional: delete progress file when done
+  await fs.unlink(PROGRESS_FILE).catch(() => {});
+}
+
+scrapeAllPages().catch(console.error);
 ```
 ## Example Uses (Scrap Details Page data)
 ```ts
