--- a/06. Automation and Scraping/01. got_request.md
+++ b/06. Automation and Scraping/01. got_request.md
@@ -55,9 +55,9 @@ await got(url, {
 Create a reusable client to centralize behavior, hooks and defaults.
 
 ```ts
-import got, { Got } from 'got';
+import got from 'got';
 
-const scraper: Got = got.extend({
+const scraper = got.extend({
   timeout: { request: 15000 },
   retry: { limit: 3, methods: ['GET', 'POST'] },
   followRedirect: true,
@@ -80,6 +80,7 @@ const scraper: Got = got.extend({
     ]
   }
 });
+export default scraper;
 
 // Usage
 const html = await scraper.get('https://example.com').text();
