--- a/06. Automation and Scraping/01. got_request.md
+++ b/06. Automation and Scraping/01. got_request.md
@@ -83,7 +83,7 @@ const scraper = got.extend({
 export default scraper;
 
 // Usage
-const html = await scraper.get('https://example.com').text();
+const response = await scraper.get('https://example.com').text();
 ```
 
 ## Proxy Support (TypeScript)
