--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -345,11 +345,14 @@ import * as cheerio from 'cheerio';
 import fs from 'fs/promises';
 import { appendToCsvFile } from './utils/csv.js';
 import { loadProgress, saveProgress } from './utils/progress.js';
+import scraper from './utils/scraper.js';
 
 const LINKS_FILE = 'data/notaires_all_links.txt';
 const PROGRESS_FILE = 'data/notaires_progress.json';
 const OUTPUT_FILE = 'data/notaires_data.csv';
 const CONCURRENCY = 3; // Number of URLs to process simultaneously
+
+const Sleep = (ms: number) => new Promise(resolve => setTimeout(resolve, ms));
 
 // Define the type
 type NotaryField = 'name' | 'phone' | 'languages' | 'website' | 'status' | 'profileUrl';
@@ -365,24 +368,23 @@ const HEADER: Array<{ id: NotaryField; title: string }> = [
 ];
 
 // Single notary scraper
-async function scrapeNotary(url: string): Promise<void> {
+async function scrapeNotary(url: string): Promise<boolean> {
   try {
-    const response = await got(url, {
-      headers: {
-        'User-Agent':
-          'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/129.0.0.0 Safari/537.36',
-      },
-      timeout: { request: 15000 },
-      retry: { limit: 3 },
-    });
-
+    // Remove query parameters from URL (everything after ?)
+    const cleanUrl = url.split('?')[0] || url;
+    const response = await scraper.get(cleanUrl);
     const $ = cheerio.load(response.body);
-
     const name = $('div.notary-card__line').first().text().trim() || 'N/A';
     const phone = $('div.office-sheet__phone.field--telephone').first().text().trim() || 'N/A';
     const languages = $('div.field__items.field-spoken-languages').first().text().trim() || 'N/A';
     const website = $('div.office-sheet__url.field--link a').first().attr('href')?.trim() || '';
     const status = $('p.notary-card__status').first().text().trim() || 'N/A';
+
+    // Check if we actually got valid data (name should not be N/A)
+    if (name === 'N/A') {
+      console.log(`⚠️  No valid data found for: ${cleanUrl}`);
+      return false; // Failed - no data extracted
+    }
 
     const row = {
       name,
@@ -390,14 +392,15 @@ async function scrapeNotary(url: string): Promise<void> {
       languages,
       website,
       status,
-      profileUrl: url,
+      profileUrl: cleanUrl, // Save the clean URL
     };
 
     await appendToCsvFile(OUTPUT_FILE, [row], HEADER);
-    console.log(`Saved: ${name}`);
+    console.log(`✅ Saved: ${name}`);
+    return true; // Success
   } catch (err: any) {
-    console.error(`Failed: ${url} → ${err.message}`);
-    // Still count as processed so we don't retry forever
+    console.error(`❌ Failed: ${url} → ${err.message}`);
+    return false; // Failed/Skipped
   }
 }
 
@@ -418,6 +421,8 @@ async function main() {
 
   let startIndex = await loadProgress(total, PROGRESS_FILE);
   console.log(`Starting from link ${startIndex} of ${total}`);
+  
+  let skip: number = 0; // Track consecutive skips
 
   for (let i = startIndex - 1; i < allLinks.length; i += CONCURRENCY) {
     // Process URLs concurrently based on CONCURRENCY setting
@@ -429,8 +434,33 @@ async function main() {
 
     console.log(`\n[${i + 1}-${i + batch.length}/${total}] Processing batch of ${batch.length} URLs`);
 
-    // Scrape all URLs in batch concurrently
-    await Promise.all(batch.map(url => scrapeNotary(url)));
+    // Scrape all URLs in batch concurrently and track results
+    const results = await Promise.all(batch.map(url => scrapeNotary(url)));
+
+    // Count how many failed in this batch
+    const failedCount = results.filter(success => !success).length;
+    const successCount = results.filter(success => success).length;
+    
+    console.log(`📊 Batch result: ${successCount} success, ${failedCount} failed`);
+    
+    if (failedCount > 0) {
+      skip += failedCount;
+      console.log(`⚠️  Skip count: ${skip} (added ${failedCount} from this batch)`);
+      
+      // If we've skipped 6 or more, sleep for 10 seconds
+      if (skip >= 3) {
+        console.log(`\n⏸️  Reached ${skip} skips. Sleeping for 10 seconds to avoid rate limiting...`);
+        await Sleep(20000);
+        skip = 0; // Reset skip counter
+        console.log('✅ Sleep complete. Resuming scraping...\n');
+      }
+    } else {
+      // If batch was successful, we can optionally reduce skip count
+      if (skip > 0) {
+        skip = Math.max(0, skip - 1);
+        console.log(`✅ All success! Skip count reduced to: ${skip}`);
+      }
+    }
 
     // Save progress after batch completes
     const currentIndex = i + batch.length;
