--- a/06. Automation and Scraping/02.1 playwright_examples.md
+++ b/06. Automation and Scraping/02.1 playwright_examples.md
@@ -585,6 +585,53 @@ async function main(): Promise<void> {
 
 main().catch(console.error);
 ```
+## Another Uses of Fix Tab
+```ts
+async function fetchUrl(page: any, url: string): Promise<void> {
+  try {
+    await page.goto(url, { waitUntil: 'domcontentloaded', timeout: 60000 });
+    await page.waitForTimeout(1000 + Math.random() * 2000);
+    const content = await page.content();
+    const $ = cheerio.load(content);
+    // Write Data
+  } catch (error: any) {
+    console.error(`Error fetching ${url}:`, error.message || error);
+  }
+}
+
+const main = async (): Promise<void> => {
+
+  const TOTAL_PAGES = 500;
+  let startPage = await loadProgress(TOTAL_PAGES);
+  const browser = await chromium.launch({headless: false});
+  const context = await browser.newContext();
+  const pages = [await context.newPage(), await context.newPage(),];
+
+  for (let i = startPage; i <= TOTAL_PAGES; i += 2) {
+    const currentBatch = [];
+    // Page 1 of batch
+    const url1 = `https://www.pagesjaunes.fr/annuaire/chercherlespros?quoiqui=notaire&page=${i}`;
+    currentBatch.push(fetchUrl(pages[0], url1));
+    // Page 2 of batch (if exists)
+    if (i + 1 <= TOTAL_PAGES) {
+      const url2 = `https://www.pagesjaunes.fr/annuaire/chercherlespros?quoiqui=notaire&page=${i + 1}`;
+      currentBatch.push(fetchUrl(pages[1], url2));
+    }
+    await Promise.all(currentBatch);
+    const lastProcessed = i + (i + 1 <= TOTAL_PAGES ? 1 : 0);
+    await saveProgress(lastProcessed, TOTAL_PAGES);
+    console.log(`Progress: ${lastProcessed}/${TOTAL_PAGES} pages scraped\n`);
+    await new Promise(resolve => setTimeout(resolve, 2000 + Math.random() * 3000));
+  }
+  await browser.close();
+  console.log(`\nScraping completed! All links saved to: ${OUTPUT_FILE}`);
+};
+
+main().catch(err => {
+  console.error('Fatal error:', err);
+  process.exit(1);
+});
+```
 
 ---
 
