--- a/06. Automation and Scraping/01.1 cheerio_parse.md
+++ b/06. Automation and Scraping/01.1 cheerio_parse.md
@@ -44,6 +44,8 @@ $('.item').each((i, el) => {
 - $('[href*="login"]') — contains substring
 - $('[src$=".jpg"]') — ends with
 - $('[data-index^="10"]') — starts with
+- $('div[class="name"]')
+- $('selector').eq(5)  // 5th index
 ```
 ## Pro-Level: Most Useful Attribute Patterns
 ```ts
@@ -78,6 +80,14 @@ $('div[data-price][data-discount]')        // has both data attributes
 $('[href*="Login" i]')         // Note: not all Cheerio versions support "i" flag
 // Better: use .filter()
 $('a').filter((i, el) => /login/i.test($(el).attr('href') || ''))
+
+// index validation
+const fifthNumber = $('div.number-contact').eq(4);
+if (fifthNumber.length) {
+  console.log(fifthNumber.text().trim());
+} else {
+  console.log('Less than 5 elements found');
+}
 ```
 ## Real-World Scraping Examples
 ```ts
