--- a/06. Automation and Scraping/01.1 cheerio_parse.md
+++ b/06. Automation and Scraping/01.1 cheerio_parse.md
@@ -46,6 +46,8 @@ $('.item').each((i, el) => {
 - $('[data-index^="10"]') — starts with
 - $('div[class="name"]')
 - $('selector').eq(5)  // 5th index
+- $('div.bi-ctas').eq(2).find('div.number-contact')  // traverse like xpath
+- $('div[data-asin] h2 a').text()        // traverse like xpath `` //div[@data-asin]//h2//a ``
 ```
 ## Pro-Level: Most Useful Attribute Patterns
 ```ts
@@ -88,6 +90,8 @@ if (fifthNumber.length) {
 } else {
   console.log('Less than 5 elements found');
 }
+$('div.bi-ctas').eq(2).find('div.number-contact')  // traverse like xpath
+$('div[data-asin] h2 a').text()        // traverse like xpath `` //div[@data-asin]//h2//a ``
 ```
 ## Real-World Scraping Examples
 ```ts
