--- a/06. Automation and Scraping/01.1 cheerio_parse.md
+++ b/06. Automation and Scraping/01.1 cheerio_parse.md
@@ -48,6 +48,7 @@ $('.item').each((i, el) => {
 - $('selector').eq(5)  // 5th index
 - $('div.bi-ctas').eq(2).find('div.number-contact')  // traverse like xpath
 - $('div[data-asin] h2 a').text()        // traverse like xpath `` //div[@data-asin]//h2//a ``
+-  $('').attr('href') // get attribute 
 ```
 ## Pro-Level: Most Useful Attribute Patterns
 ```ts
