--- a/06. Automation and Scraping/01.1 cheerio_parse.md
+++ b/06. Automation and Scraping/01.1 cheerio_parse.md
@@ -45,7 +45,7 @@ $('.item').each((i, el) => {
 - $('[src$=".jpg"]') — ends with
 - $('[data-index^="10"]') — starts with
 - $('div[class="name"]')
-- $('selector').eq(5)  // 5th index
+- $('selector').eq(5)  // 5th index, but 6th number
 - $('div.bi-ctas').eq(2).find('div.number-contact')  // traverse like xpath
 - $('div[data-asin] h2 a').text()        // traverse like xpath `` //div[@data-asin]//h2//a ``
 -  $('').attr('href') // get attribute 
