--- a/06. Automation and Scraping/02. playwright.md
+++ b/06. Automation and Scraping/02. playwright.md
@@ -468,6 +468,8 @@ await page.locator('inner_selector').click();
 
 ## 19. Click Blank Space
 ```typescript
+await page.locator('body').click();  // Click Blank Space
+
 const x = 500;
 const y = 500;
 
